--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
@@ -4,7 +4,265 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<section>
+    <div id="main_slider" class="carousel slide banner-main" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#main_slider" data-slide-to="0" class="active"></li>
+            <li data-target="#main_slider" data-slide-to="1"></li>
+            <li data-target="#main_slider" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="container">
+                    <div class="row marginii">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="carousel-caption ">
+                                <h1>Welcome To The <strong class="color">Nutrients Plants</strong></h1>
+                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                                <a class="btn btn-lg btn-primary" href="#" role="button">About</a>
+                                <a class="btn btn-lg btn-primary" href="#" role="button">Contact US</a>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="img-box">
+                                <figure><img src="~/images/gyufyufyu.png" alt="img" /></figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row marginii">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="carousel-caption ">
+                                <h1>Welcome To The <strong class="color">Nutrients Plants</strong></h1>
+                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                                <a class="btn btn-lg btn-primary" href="#" role="button">About</a>
+                                <a class="btn btn-lg btn-primary" href="#" role="button">Contact US</a>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="img-box ">
+                                <figure><img src="~/images/gyufyufyu.png" alt="img" /></figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row marginii">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="carousel-caption ">
+                                <h1>Welcome To The <strong class="color">Nutrients Plants</strong></h1>
+                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                                <a class="btn btn-lg btn-primary" href="#" role="button">About</a>
+                                <a class="btn btn-lg btn-primary" href="#" role="button">Contact US</a>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="img-box">
+                                <figure><img src="~/images/gyufyufyu.png" alt="img" /></figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+            <i class='fa fa-angle-left'></i>
+        </a>
+        <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+            <i class='fa fa-angle-right'></i>
+        </a>
+    </div>
+</section>
+
+<div id="plant" class="plants">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 ">
+                <div class="titlepage">
+                    <h2>Our Wonderful plants</h2>
+                    <span>looking at its layout. The point of using Lorem Ipsumletters, as opposed to usingl</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                <div class="plants-box">
+                    <figure><img src="~/images/plant1.jpg" alt="img" /></figure>
+                    <h3> Floral Vibrant</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                <div class="plants-box">
+                    <figure><img src="~/images/plant2.jpg" alt="img" /></figure>
+                    <h3> Floral Vibrant</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                <div class="plants-box">
+                    <figure><img src="~/images/plant3.jpg" alt="img" /></figure>
+                    <h3> Floral Vibrant</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="about" class="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <div class="about-box">
+                        <h2>50</h2>
+                        <div class="white-bg">
+                            <span>Satisfaction</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <div class="about-box">
+                        <h2>50</h2>
+                        <div class="white-bg">
+                            <span>Free Delivery</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                    <div class="about-box">
+                        <h2>50</h2>
+                        <div class="white-bg">
+                            <span>Store Locators</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                <div class="about-box">
+                    <div class="titlepage">
+                        <h2>About US</h2>
+                        <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English....</span>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="gallery" class="Gallery">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="titlepage">
+                    <h2>Our Gallery </h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid margin-r-l">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 thumb">
+                <div class="Gallery-box">
+                    <figure>
+                        <a href="~/images/1.jpg" class="fancybox" rel="ligthbox">
+                            <img src="~/images/1.jpg" class="zoom img-fluid" alt="">
+                        </a>
+                        <span class="hoverle">
+                            <a href="~/images/1.jpg" class="fancybox" rel="ligthbox">View</a>
+                        </span>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 thumb">
+                <div class="Gallery-box">
+                    <figure>
+                        <a href="~/images/2.jpg" class="fancybox" rel="ligthbox">
+                            <img src="~/images/2.jpg" class="zoom img-fluid" alt="">
+                        </a>
+                        <span class="hoverle">
+                            <a href="~/images/2.jpg" class="fancybox" rel="ligthbox">View</a>
+                        </span>
+                    </figure>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 thumb">
+                <div class="Gallery-box">
+                    <figure>
+                        <a href="~/images/3.jpg" class="fancybox" rel="ligthbox">
+                            <img src="~/images/3.jpg" class="zoom img-fluid" alt="">
+                        </a>
+                        <span class="hoverle">
+                            <a href="~/images/3.jpg" class="fancybox" rel="ligthbox">View</a>
+                        </span>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="contact" class="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="titlepage">
+                    <h2>Contact Us</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 paddimg-right">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <form>
+                            <div class="row">
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                    <input class="form-control" placeholder="Name" type="text" name="Name">
+                                </div>
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                    <input class="form-control" placeholder="Email" type="text" name="Email">
+                                </div>
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                    <input class="form-control" placeholder="Phone" type="text" name="Phone">
+                                </div>
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                    <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
+                                </div>
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                    <a href="#">Submit</a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <div class="map_section">
+                            <figure><img src="~/images/map.jpg"></figure>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 paddimg-left">
+                <div class="Nursery-img">
+                    <figure>
+                        <img src="~/images/contactimg.jpg" alt="img" />
+                        <div class="text-box">
+                            <h3>Best Green Nursery</h3>
+                        </div>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
