Update_Batch_FE

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
@@ -82,37 +82,40 @@
 <div id="plant" class="plants">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 ">
+            <div class="col-md-12">
                 <div class="titlepage">
-                    <h2>Our Wonderful plants</h2>
-                    <span>looking at its layout. The point of using Lorem Ipsumletters, as opposed to usingl</span>
+                    <h2>Our Wonderful Plants</h2>
+                    <span>looking at its layout. The point of using Lorem Ipsum letters, as opposed to using</span>
                 </div>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                <div class="plants-box">
-                    <figure><img src="~/images/plant1.jpg" alt="img" /></figure>
-                    <h3> Floral Vibrant</h3>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                <div class="plants-box">
-                    <figure><img src="~/images/plant2.jpg" alt="img" /></figure>
-                    <h3> Floral Vibrant</h3>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                <div class="plants-box">
-                    <figure><img src="~/images/plant3.jpg" alt="img" /></figure>
-                    <h3> Floral Vibrant</h3>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
-                </div>
-            </div>
+            @if (Model.Flowers != null && Model.Flowers.Count > 0)
+            {
+                foreach (var flower in Model.Flowers)
+                {
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                        <div class="plants-box">
+                            <a href="/FlowerPages/FlowerDetails/@flower.FlowerId">
+                                <figure>
+                                    <img src="~/images/@flower.Image" alt="@flower.Name" />
+                                </figure>
+                                <h3>@flower.Name</h3>
+                                <p>@flower.Description</p>
+                                <p><strong>Price:</strong> $@flower.PricePerUnit</p>
+                                <p><strong>Origin:</strong> @flower.Origin</p>
+                                <p><strong>Color:</strong> @flower.Color</p>
+                            </a>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <p>No plants available.</p>
+            }
         </div>
     </div>
 </div>
