--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
@@ -91,10 +91,9 @@
     </div>
 </div>
 <style>
-        .form - container {
-        background - color: white; /* Ensure the form's background is white */
+    .form-container {
+        background-color: white !important;
     }
-
     select {
         appearance: auto; /* Ensure the dropdown behaves normally */
     }
