--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Login";
 }
 
+<div id="plant" class="plants">
 <div class="row justify-content-center">
     <div class="col-md-4">
         <h1 class="text-center mb-4">Login</h1>
@@ -22,4 +23,5 @@
             <button type="submit" class="btn btn-primary btn-block mt-3">Log in</button>
         </form>
     </div>
+</div>
 </div>
