--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/wwwroot/css/style.css
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/wwwroot/css/style.css
@@ -1049,7 +1049,9 @@ ul.top_icon li a {
 }
 
 .main-menu {
-     text-align: center;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .main-menu ul {
@@ -1143,6 +1145,7 @@ ul.top_icon li a {
      position: absolute;
      top: 100%;
 }
+
 .main-menu ul>li {
      position: inherit;
      display: inline-block;
@@ -1828,7 +1831,7 @@ img.zoom {
      margin: 10px auto;
      width: 283px;
      height: 6px;
-     background: #308409;
+     background: #ffffff;
 }
 .Gallery .Gallery-box:hover .hoverle {
      position: absolute;
@@ -1886,7 +1889,6 @@ img.zoom {
      margin: 0px;
 }
 form {
-     background: #308409;
      padding: 35px 30px;
 }
 .map_section figure img {
@@ -1951,8 +1953,9 @@ textarea {
      width: 100%;
 }
 .footer {
-     background-color: #212120;
-     text-align: center;
+    background-color: #212120;
+    margin-top: 50px;
+    text-align: center;
 }
 .footer .headinga h3 {
      font-size: 38px;
@@ -2016,7 +2019,6 @@ ul.location_icon span {
      font-weight: 400;
 }
 .copyright {
-     background: #308409;
      padding: 20px 0px 20px 0;
 }
 .copyright p {
