fix FE login, batch

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/CreateBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/CreateBatch.cshtml
@@ -72,6 +72,6 @@
             <span asp-validation-for="Input.FlowerId" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary">Create</button>
-        <a href="/BatchPages/BatchIndex" class="btn btn-secondary">Cancel</a>
+        <a href="/BatchIndex" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
