--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/DeleteBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/DeleteBatch.cshtml
@@ -12,7 +12,7 @@
     <p class="text-danger mt-3">Are you sure you want to delete this batch?</p>
     <form id="deleteBatchForm">
         <button type="submit" class="btn btn-danger">Delete</button>
-        <a href="/BatchPages/BatchIndex" class="btn btn-secondary">Cancel</a>
+        <a href="/BatchIndex" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 
