--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/EditBatch.cshtml
@@ -28,7 +28,6 @@
             </ul>
         </div>
     }
-    <div class="form-container" style="background-color: white;">
         <form method="post">
             <div class="form-group">
                 <label asp-for="Input.FlowerType">Flower Type</label>
@@ -85,18 +84,9 @@
 
 
             <button type="submit" class="btn btn-primary">Save</button>
-            <a href="/BatchPages/BatchIndex" class="btn btn-secondary">Cancel</a>
+            <a href="/BatchIndex" class="btn btn-secondary">Cancel</a>
         </form>
 
     </div>
-</div>
-<style>
-    .form-container {
-        background-color: white !important;
-    }
-    select {
-        appearance: auto; /* Ensure the dropdown behaves normally */
-    }
 
-</style>
 
