--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/BatchIndex"
 @model PRN231_2_EventFlowerExchange_FE.Pages.BatchPages.BatchIndexModel
 @{
     ViewData["Title"] = "Batch List";
