--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
@@ -11,12 +11,12 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LoginRequest.Email"></label>
+                <label class="text-white" asp-for="LoginRequest.Email"></label>
                 <input asp-for="LoginRequest.Email" class="form-control" />
                 <span asp-validation-for="LoginRequest.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LoginRequest.Password"></label>
+                <label class="text-white"  asp-for="LoginRequest.Password"></label>
                 <input asp-for="LoginRequest.Password" class="form-control" type="password" />
                 <span asp-validation-for="LoginRequest.Password" class="text-danger"></span>
             </div>
