Update_Create_BE_And_FE_Batch_Flower

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Layout.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Layout.cshtml
@@ -35,9 +35,7 @@
     </style>
 </head>
 <body class="main-layout">
-    <div class="loader_bg">
-        <div class="loader"><img src="~/images/loading.gif" alt="#" /></div>
-    </div>
+
 
     <header>
         <div class="header">
@@ -52,7 +50,7 @@
                                         <li class="active"> <a href="#">Home</a> </li>
                                         <li> <a href="#about">About</a> </li>
                                         <li><a href="#plant">Flowers</a></li>
-                                        <li><a href="/BatchPages/BatchIndex">Batch</a></li>
+                                        <li><a href="/BatchIndex">Batch</a></li>
                                         <li><a href="#contact">Contact Us</a></li>
                                    @*      @if (Context.Session.GetString("UserRole") == "Admin")
                                         {
