--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
@@ -7,16 +7,16 @@
 <div id="plant" class="plants">
 <div class="row justify-content-center">
     <div class="col-md-4">
-        <h1 class="text-center mb-4">Login</h1>
+        <h1 class="text-center mb-4 ">Login</h1>
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label class="text-white" asp-for="LoginRequest.Email"></label>
+                <label class="text-black" asp-for="LoginRequest.Email"></label>
                 <input asp-for="LoginRequest.Email" class="form-control" />
                 <span asp-validation-for="LoginRequest.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="text-white"  asp-for="LoginRequest.Password"></label>
+                <label class="text-black"  asp-for="LoginRequest.Password"></label>
                 <input asp-for="LoginRequest.Password" class="form-control" type="password" />
                 <span asp-validation-for="LoginRequest.Password" class="text-danger"></span>
             </div>
