--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Layout.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,15 @@
         <div class="header">
             <div class="container">
                 <div class="row">
-                    <!-- ... other header content ... -->
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                        <div class="full">
+                            <div class="center-desk">
+                                <div class="logo">
+                                    <a href="index.html"><img src="~/images/logo.png" alt="#"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                         <div class="menu-area">
                             <div class="limit-box">
@@ -75,6 +83,9 @@
                                         {
                                             <li class="nav-item">
                                                 <a class="nav-link text-dark" asp-area="" asp-page="/Login/Login">Login</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link text-dark" asp-area="" asp-page="/Login/Register">Register</a>
                                             </li>
                                         }
                                     </ul>
