--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/wwwroot/css/site.css
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/wwwroot/css/site.css
@@ -1,31 +1,3 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
-.content-wrapper {
-    padding-top: 60px; /* Adjust this value based on your header height */
-}
-
-@media (max-width: 768px) {
-    .content-wrapper {
-        padding-top: 80px; /* Increase padding for mobile views if needed */
-    }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
