Update_Migration_FE_Batch

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchDetails.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchDetails.cshtml
@@ -38,5 +38,5 @@
         </div>
     }
 
-    <a href="/BatchPages/BatchIndex" class="btn btn-secondary mt-3">Back to List</a>
+    <a href="/BatchIndex" class="btn btn-secondary mt-3">Back to List</a>
 </div>
