--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -25,7 +25,7 @@
                 }
                 else
                 {
-                    <a asp-page="/Login" class="text-gray-800 hover:text-indigo-600">Login</a>
+                    <a href="/Login" class="text-gray-800 hover:text-indigo-600">Login</a>
                     <a asp-area="" asp-page="/Register" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Register</a>
                 }
             </div>
