--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/BatchPages/BatchIndex.cshtml
@@ -35,7 +35,7 @@
                             <td>
                                 <a href="/BatchPages/BatchDetails?id=@batch.BatchId" class="btn btn-info btn-sm">Details</a>
                                 <a href="/BatchPages/EditBatch?id=@batch.BatchId" class="btn btn-warning btn-sm">Edit</a>
-                                <a href="/BatchPages/DeleteBatch/@batch.BatchId" class="btn btn-danger btn-sm">Delete</a>
+                                <a href="/BatchPages/DeleteBatch?id=@batch.BatchId" class="btn btn-danger btn-sm">Delete</a>
                             </td>
                         </tr>
                     }
