--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Index.cshtml
@@ -32,7 +32,7 @@
                 foreach (var flower in Model.Flowers)
                 {
                     <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                        <img src="~/images/2.jpg" alt="@flower.Name" class="w-full h-64 object-cover">
+                        <img src="@flower.Image" alt="@flower.Name" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-black mb-2">@flower.Name</h3>
                             <p class="text-gray-700 text-base">@flower.Description</p>
